# atlas

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  env.example
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: build.rs  download.rs  main.rs  serve.rs  upload.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: bbox.rs  contribution.rs  coord.rs  error.rs  format.rs  geo_utils.rs  lib.rs  place.rs  query.rs  telemetry.rs  time.rs
crates/atlas-geocode/: Cargo.toml
crates/atlas-geocode/src/: index.rs  landmark.rs  lib.rs  parser.rs  resolve.rs  reverse.rs  tokenizer.rs
crates/atlas-ingest/: Cargo.toml
crates/atlas-ingest/src/: lib.rs  main.rs  normalize.rs  osm.rs  overture.rs
crates/atlas-route/: Cargo.toml
crates/atlas-route/src/: dijkstra.rs  engine.rs  instructions.rs  lib.rs  matrix.rs  path.rs  penalties.rs  snap.rs  speed_data.rs
crates/atlas-route/src/ch/: mod.rs  preprocess.rs  query.rs  serialize.rs
crates/atlas-route/src/graph/: builder.rs  edge.rs  mod.rs  node.rs  road_network.rs
crates/atlas-route/src/profiles/: africa.rs  bicycle.rs  car.rs  foot.rs  mod.rs  motorcycle.rs
crates/atlas-search/: Cargo.toml
crates/atlas-search/src/: categories.rs  index.rs  lib.rs
crates/atlas-server/: Cargo.toml
crates/atlas-server/src/: config.rs  lib.rs  main.rs  state.rs
crates/atlas-server/src/middleware/: auth.rs  metrics.rs  mod.rs  rate_limit.rs
crates/atlas-server/src/routes/: contribute.rs  geocode.rs  health.rs  metrics.rs  mod.rs  route.rs  search.rs  telemetry.rs  tiles.rs
crates/atlas-server/tests/: integration.rs
crates/atlas-tiles/: Cargo.toml  build.rs
crates/atlas-tiles/proto/: vector_tile.proto
crates/atlas-tiles/src/: lib.rs
crates/atlas-tiles/src/generator/: encoder.rs  mod.rs  simplify.rs  writer.rs
crates/atlas-tiles/src/store/: cache.rs  local.rs  mod.rs  response.rs  s3.rs
scripts/: download-test-data.sh
sdk/atlas-js/: index.html  package-lock.json  package.json  vite.config.ts
sdk/atlas-js/src/: App.tsx  Map.tsx  NavigationView.tsx  RoutePanel.tsx  SearchBar.tsx  api.ts  styles.css  types.ts
