[package]
name = "atlas-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Augani/atlas"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pmtiles = { workspace = true }
bytes = { workspace = true }
rstar = { workspace = true }
bincode = { workspace = true }
time = { workspace = true }
