[package]
name = "atlas-route"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Augani/atlas"

[dependencies]
atlas-core = { path = "../atlas-core" }
osmpbf = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
rstar = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
