[package]
name = "atlas-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Augani/atlas"

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-geocode = { path = "../atlas-geocode" }
tantivy = { workspace = true }
tantivy-tokenizer-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
